<?xml version="1.0"?>

<!-- Package format 3 according to http://www.ros.org/reps/rep-0149.html -->
<package format="3">
  <name>mqtt_bridge</name>
  <version>0.2.1</version>
  <description>
    This package is a ROS2 version of the MQTT bridge
  </description>


  <maintainer email="nharada1@gmail.com">Nate Harada</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>python3-setuptools</buildtool_depend>

  <build_depend>python3-pip</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosbridge_library</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-pymongo</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
